--- a/src/main/resources/ServerPane.fxml
+++ b/src/main/resources/ServerPane.fxml
@@ -12,12 +12,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="paneId" dividerPositions="0.18433179723502305, 0.5990783410138248, 0.6835637480798771, 0.9231950844854071" orientation="VERTICAL" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tfa.se4.gui.ServerPaneController">
+<SplitPane fx:id="paneId" dividerPositions="0.15506715506715507, 0.5274725274725275, 0.8998778998778999" orientation="VERTICAL" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <items>
       <HBox SplitPane.resizableWithParent="false">
          <children>
             <VBox>
                <children>
+                  <Label text="Status">
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </Label>
                   <Label text="Map" VBox.vgrow="NEVER">
                      <padding>
                         <Insets left="5.0" right="5.0" top="5.0" />
@@ -66,6 +77,14 @@
             </VBox>
             <VBox HBox.hgrow="NEVER">
                <children>
+                  <Label fx:id="statusLabel" text="some status">
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
                   <Label fx:id="mapLabel" text="some map" VBox.vgrow="NEVER">
                      <padding>
                         <Insets left="5.0" right="5.0" top="5.0" />
@@ -74,7 +93,7 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="modeLabel" text="some mode" VBox.vgrow="NEVER">
+                  <Label fx:id="modeLabel" prefHeight="22.0" prefWidth="134.0" text="some mode" VBox.vgrow="NEVER">
                      <padding>
                         <Insets left="5.0" right="5.0" top="5.0" />
                      </padding>
@@ -100,6 +119,66 @@
                   </Label>
                </children>
             </VBox>
+            <VBox HBox.hgrow="NEVER">
+               <children>
+                  <Label text="Server Name">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label text="FPS">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label text="Sent">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label text="Received">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="161.0" prefWidth="454.0">
+               <children>
+                  <Label fx:id="serverNameLabel" text="Label">
+                     <padding>
+                        <Insets left="5.0" right="50.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="fpsLabel" alignment="CENTER_RIGHT" text="Label">
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="bytesSentLabel" alignment="CENTER_RIGHT" text="Label">
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="bytesReceivedLabel" alignment="CENTER_RIGHT" text="Label">
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </VBox>
          </children>
          <effect>
             <SepiaTone />
@@ -118,36 +197,8 @@
           <TableColumn fx:id="longestShot" editable="false" prefWidth="65.0" style="-fx-alignment: CENTER_RIGHT;" text="Distance" />
         </columns>
       </TableView>
-      <HBox scaleShape="false" SplitPane.resizableWithParent="false">
-         <children>
-            <Button fx:id="profileButton" mnemonicParsing="false" onAction="#showProfile" text="Profile">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </Button>
-            <Button fx:id="kickButton" mnemonicParsing="false" onAction="#kick" text="Kick">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </Button>
-            <Button fx:id="banButton" layoutX="84.0" layoutY="20.0" mnemonicParsing="false" onAction="#ban" text="Ban">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <ListView fx:id="logList" />
-      <HBox prefHeight="113.0" prefWidth="838.0" scaleShape="false" SplitPane.resizableWithParent="false">
+      <ListView fx:id="logList" prefHeight="393.0" prefWidth="838.0" />
+      <HBox SplitPane.resizableWithParent="false">
          <children>
             <Button mnemonicParsing="false" onAction="#clearLog" text="Clear">
                <HBox.margin>
