Add IPStack support Have GUI save window settings on exit and re-use on startup Show steam and IP stack on/off state in server log Add plain zipfile distro Improve readme documentation Provide startup batch file for command-line mode Tidy server pane

--- a/src/main/resources/MainPane.fxml
+++ b/src/main/resources/MainPane.fxml
@@ -17,7 +17,7 @@
          <children>
             <Button fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonClicked" text="Connect ..." textAlignment="CENTER" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#quitButtonClicked" text="Quit" />
+            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeButtonClicked" text="Quit" />
          </children>
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
