--- a/src/main/resources/MainPane.fxml
+++ b/src/main/resources/MainPane.fxml
@@ -9,11 +9,11 @@
 
 <SplitPane dividerPositions="0.85" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tfa.se4.gui.MainPaneController">
   <items>
-      <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="ALL_TABS">
+      <TabPane fx:id="tabPane" prefHeight="-Infinity" prefWidth="200.0" tabClosingPolicy="ALL_TABS">
         <tabs>
         </tabs>
       </TabPane>
-      <HBox alignment="CENTER" fillHeight="false" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" SplitPane.resizableWithParent="false">
+      <HBox alignment="CENTER" fillHeight="false" minHeight="50.0" maxHeight="50.0" prefHeight="50.0" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" SplitPane.resizableWithParent="false">
          <children>
             <Button fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonClicked" text="Connect ..." textAlignment="CENTER" />
             <Region HBox.hgrow="ALWAYS" />
