--- a/src/main/resources/ServerPane.fxml
+++ b/src/main/resources/ServerPane.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<SplitPane fx:id="paneId"  orientation="VERTICAL" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane fx:id="paneId"  orientation="VERTICAL" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" SplitPane.resizableWithParent="true">
   <items>
       <HBox minHeight="115.0" maxHeight="115.0" prefHeight="115.0">
          <children>
@@ -198,8 +198,8 @@
             <TableColumn fx:id="location" editable="false" prefWidth="150.0" text="Location" />
         </columns>
       </TableView>
-      <ListView fx:id="logList" prefHeight="400.0" prefWidth="838.0" />
-      <HBox fillHeight="false" minHeight="40.0" maxHeight="40.0" prefHeight="40.0" prefWidth="838.0" SplitPane.resizableWithParent="false">
+      <ListView fx:id="logList" prefHeight="400.0" prefWidth="838.0" SplitPane.resizableWithParent="true"/>
+      <HBox fillHeight="false" minHeight="40.0" maxHeight="40.0" prefHeight="40.0" prefWidth="838.0">
          <children>
             <Label text="Server command" HBox.hgrow="NEVER">
                <font>
