Move to release versioning from pre-release Display game countdown timer on GUI. Update IP stack logging to show location in log file. Update example config to default values that work when no steam API key is present. Don't treat using steam facilities without a steam key as an error, just switch them off Add an online check for later version being available. Show version number on window title Add hyperlink to website on main window.

--- a/src/main/resources/ServerPane.fxml
+++ b/src/main/resources/ServerPane.fxml
@@ -153,6 +153,14 @@
                         <Insets left="50.0" right="5.0" top="5.0" />
                      </padding>
                   </Label>
+                  <Label text="Remaining" fx:id="remainingLabel">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
                </children>
             </VBox>
             <VBox prefHeight="161.0" prefWidth="454.0">
@@ -173,6 +181,11 @@
                      </padding>
                   </Label>
                   <Label fx:id="bytesReceivedLabel" alignment="CENTER_RIGHT" text="Label">
+                     <padding>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="timeLeftLabel" alignment="CENTER_RIGHT" text="Label">
                      <padding>
                         <Insets left="5.0" right="5.0" top="5.0" />
                      </padding>
