--- a/src/main/resources/MainPane.fxml
+++ b/src/main/resources/MainPane.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,9 +15,19 @@
         <tabs>
         </tabs>
       </TabPane>
-      <HBox alignment="CENTER" fillHeight="false" minHeight="50.0" maxHeight="50.0" prefHeight="50.0" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" SplitPane.resizableWithParent="false">
+      <HBox alignment="CENTER" fillHeight="false" maxHeight="50.0" minHeight="50.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="50.0" spacing="10.0" SplitPane.resizableWithParent="false">
          <children>
             <Button fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonClicked" text="Connect ..." textAlignment="CENTER" />
+            <Label fx:id="statusLabel" text="Web site" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </Label>
+            <Hyperlink fx:id="statusHyperlink" text="https://github.com/peterwalkley/SE4AdminTool" HBox.hgrow="ALWAYS">
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+            </Hyperlink>
             <Region HBox.hgrow="ALWAYS" />
             <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeButtonClicked" text="Quit" />
          </children>
