Check if player is used a shared game instance and apply bans if the original game owner was banned. This requires a Steam API key. Display hours played in players table. This requires a Steam API key and that the player has made the information public. Fix issue where duplicate bans could be added to ban list. Change re-connect handler to apply a increasing retry delay starting at 10 seconds and going up to 10 minutes. Add copy to clipboard options for player name and steam id on player window pop-up menu.

--- a/src/main/resources/ServerPane.fxml
+++ b/src/main/resources/ServerPane.fxml
@@ -208,7 +208,8 @@
           <TableColumn fx:id="kills" editable="false" prefWidth="65.0" style="-fx-alignment: CENTER_RIGHT;" text="Kills" />
           <TableColumn fx:id="assists" editable="false" prefWidth="65.0" style="-fx-alignment: CENTER_RIGHT;" text="Assists" />
           <TableColumn fx:id="longestShot" editable="false" prefWidth="65.0" style="-fx-alignment: CENTER_RIGHT;" text="Distance" />
-            <TableColumn fx:id="location" editable="false" prefWidth="150.0" text="Location" />
+          <TableColumn fx:id="playedHours" editable="false" prefWidth="65.0" style="-fx-alignment: CENTER_RIGHT;" text="Play hours" />
+          <TableColumn fx:id="location" editable="false" prefWidth="150.0" text="Location" />
         </columns>
       </TableView>
       <ListView fx:id="logList" prefHeight="400.0" prefWidth="838.0" SplitPane.resizableWithParent="true"/>
